fl-server/templates/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      # nodeSelector:
      #   fleet : A
      containers:
      - name: server
        image: bobmorane/fl-server:v1.0
        imagePullPolicy: Always
        ports:
        - name: prometheus
          containerPort: 8000
        - name: fl
          containerPort: 8080
