fl-server/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  ports:
    - name: prometheus
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: fl
      protocol: TCP
      port: 8080
      targetPort: 8080
