fl-server/templates/ingress.yaml
# ingressroute-flask-upload.yaml

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: server-ingress
#   namespace: default
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     traefik.ingress.kubernetes.io/router.entrypoints: tcp1
#     traefik.ingress.kubernetes.io/service.serversscheme: h2c
# spec:
#   rules:
#     - host: poc.faf.dev.gcp.renault.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: server-service
#                 port:
#                   number: 8080

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: server-ingress-tcp
  namespace: default
spec:
  entryPoints:
    - tcp1
  routes:
    - match: Host(`poc.faf.dev.gcp.renault.com`) && Headers(`Content-Type`, `application/grpc`)
      priority: 110
      kind: Rule
      services:
      - kind: Service
        name: server-service
        port: 8080
        scheme: h2c
